# top-panel

./: .clang-format  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  applicationhandler.cpp  applicationhandler.h  main.cpp  main.qml  panel.cpp  panel.h  panelhelper.cpp  panelhelper.h  qml.qrc
src/appmenu/: appmenuapplet.cpp  appmenudbus.cpp  dbusmenu_interface.h  fun.tarrow.appmenu.xml
src/components/: DesktopMenu.qml  MenuItem.qml  StandardItem.qml
src/desktopmenu/: menupopupwindow.cpp  menupopupwindow.h
src/window/: windowblur.cpp  windowblur.h
